--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Karuna Welfare Society</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Cardo|Carroid+Gothic+SC" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/photoswipe/photoswipe.css">
+    <link rel="stylesheet" href="/assets/photoswipe/default-skin/default-skin.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ "/assets/sass/main.css" | absolute_url }}">
   </head>
   <body>
     {{content}}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="/assets/photoswipe/photoswipe.min.js"></script>
+    <script src="/assets/photoswipe/photoswipe-ui-default.min.js"></script>
     <script src="/assets/scripts/scripts.js"></script>
   </body>
 </html>
