--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
 
-@import '../css/fonts';
-@import '../css/typeplate';
-@import '../css/style';
+@import '../css/normalize';
+@import '../css/vars';
+@import '../css/main';
