--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,23 +1,111 @@
 ---
-title: Welcome to Middleman
+title: Karuna Welfare Society
 ---
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 340" class="middleman-logo" aria-labelledby="middleman-logo__title" role="img">
-  <title id="middleman-logo__title">Middleman</title>
-  <path class="middleman-logo__top-left-bar" fill-opacity=".45" d="M0 40L200 0v30L0 60z"/>
-  <path class="middleman-logo__top-right-bar" fill="#fff" d="M200 0l200 40v20L200 30z"/>
-  <path class="middleman-logo__left-m" fill-opacity=".45" d="M0 78v184l45 5V152l45 83 47-83v129l53 7V52l-57 8-43 83-43-70z"/>
-  <path class="middleman-logo__right-m" fill="#fff" d="M400 78v184l-45 5V152l-45 83-47-83v129l-53 7V52l57 8 43 83 43-70z"/>
-  <path class="middleman-logo__bottom-left-bar" fill-opacity=".45" d="M0 300l200 40v-30L0 280z"/>
-  <path class="middleman-logo__bottom-right-bar" fill="#fff" d="M200 340l200-40v-20l-200 30z"/>
-</svg>
-
-<h1>
-  Middleman is Running
-</h1>
-
-<%= link_to(
-  "Read Documentation",
-  "https://middlemanapp.com/basics/templating_language/",
-  target: "_blank"
-) %>
+<main>
+  <section class="landing-hero">
+    <div class="container">
+      <div class="spacer"></div>
+      <div class="spacer"></div>
+      <div class="inner">
+        <h1>Investing into India's tomorrow.</h1>
+        <div>
+          <a href="#0" class="button">Get in touch</a>
+        </div>
+      </div>
+      <div class="spacer"></div>
+      <div class="spacer"></div>
+    </div>
+  </section>
+  <section class="who-we-are">
+    <div class="container">
+      <div class="spacer">
+      </div>
+      <h2>See our various outreach programs to learn more about us:</h2>
+      <div class="row">
+        <% link_to "#0", class: "card" do %>
+          <span class="title">
+            Karuna Kendra Study Center
+          </span>
+        <% end %>
+        <% link_to "#0", class: "card" do %>
+          <span class="title">
+            Karuna Covid Releif
+          </span>
+        <% end %>
+        <% link_to "#0", class: "card" do %>
+          <span class="title">
+            Karuna Covid Aid
+          </span>
+        <% end %>
+        <% link_to "#0", class: "card" do %>
+          <span class="title">
+            Karuna Water Project
+          </span>
+        <% end %>
+      </div>
+      <div class="spacer">
+      </div>
+    </div>
+  </section>
+  <section class="what-we-do">
+    <div class="container">
+      <div class="spacer">
+      </div>
+      <h2>What we do:</h2>
+      <div class="row">
+        <% link_to "#0", class: "card" do %>
+          <span class="title">
+            Basic Education
+          </span>
+          <span class="content">
+            At our study centers we 
+            provide basic education 
+            to underprivileged 
+            children, to prep them 
+            for higher education.
+          </span>
+        <% end %>
+        <% link_to "#0", class: "card" do %>
+          <span class="title">
+            Life Building
+          </span>
+          <span class="content">
+            We try our best 
+            to ensure that kids 
+            from our centers attain 
+            English Medium education 
+            in order to avail 
+            better opportunities.
+          </span>
+        <% end %>
+        <% link_to "#0", class: "card" do %>
+          <span class="title">
+            Meeting Necessities
+          </span>
+          <span class="content">
+            We provide them with 
+            basic help with their school 
+            uniforms, stationary, tution 
+            support, tutoring, health 
+            check ups etc.
+          </span>
+        <% end %>
+        <% link_to "#0", class: "card" do %>
+          <span class="title">
+            Love & Nourishment
+          </span>
+          <span class="content">
+            Each child under the care 
+            is nurtured with love and 
+            compassion to make them 
+            responsible citizens of 
+            India.
+          </span>
+        <% end %>
+      </div>
+      <div class="spacer">
+      </div>
+    </div>
+  </section>
+</main>
