--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,11 +6,14 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <title><%= current_page.data.title || "Karuna Welfare Society" %></title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800;900&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
   </head>
   <body>
+    <%= partial "nav" %>
     <%= yield %>
+    <%= partial "footer" %>
   </body>
 </html>
