--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -54,7 +54,7 @@ title: Karuna Welfare Society
       </div>
       <h2>What we do:</h2>
       <div class="row">
-        <% link_to "#0", class: "card" do %>
+        <div class="card">
           <span class="title">
             Basic Education
           </span>
@@ -65,8 +65,8 @@ title: Karuna Welfare Society
             children, to prep them 
             for higher education.
           </span>
-        <% end %>
-        <% link_to "#0", class: "card" do %>
+        </div>
+        <div class="card">
           <span class="title">
             Life Building
           </span>
@@ -78,8 +78,8 @@ title: Karuna Welfare Society
             in order to avail 
             better opportunities.
           </span>
-        <% end %>
-        <% link_to "#0", class: "card" do %>
+        </div>
+        <div class="card">
           <span class="title">
             Meeting Necessities
           </span>
@@ -90,8 +90,8 @@ title: Karuna Welfare Society
             support, tutoring, health 
             check ups etc.
           </span>
-        <% end %>
-        <% link_to "#0", class: "card" do %>
+        </div>
+        <div class="card">
           <span class="title">
             Love & Nourishment
           </span>
@@ -102,7 +102,7 @@ title: Karuna Welfare Society
             responsible citizens of 
             India.
           </span>
-        <% end %>
+        </div>
       </div>
       <div class="spacer">
       </div>
