--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="inner flex space-between">
       <%= link_to "KWS", '/', class: "logo" %>
-      <%= link_to "MENU", '#0' , class: "menu"%>
+      <%= link_to "MENU", '#0' , class: "menu", id: "open-menu" %>
     </div>
   </div>
 </div>
