--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,10 +7,17 @@ title: Karuna Welfare Society
     <div class="container">
       <div class="spacer"></div>
       <div class="spacer"></div>
-      <div class="inner">
-        <h1>Investing into India's tomorrow.</h1>
-        <div>
-          <a href="#0" class="button">Get in touch</a>
+      <div class="sps flex">
+        <div class="inner">
+          <h1>Investing into India's tomorrow.</h1>
+          <div>
+            <a href="#0" class="button">Get in touch</a>
+          </div>
+        </div>
+        <div class="images-container">
+          <div><%= image_tag "bubble-1.png" %></div>
+          <div><%= image_tag "bubble-2.png" %></div>
+          <div><%= image_tag "bubble-3.png" %></div>
         </div>
       </div>
       <div class="spacer"></div>
@@ -23,17 +30,17 @@ title: Karuna Welfare Society
       </div>
       <h2>See our various outreach programs to learn more about us:</h2>
       <div class="row">
-        <% link_to "#0", class: "card" do %>
+        <% link_to "karuna-kendra-study-center", class: "card" do %>
           <span class="title">
             Karuna Kendra Study Center
           </span>
         <% end %>
-        <% link_to "#0", class: "card" do %>
+        <% link_to "karuna-covid-releif", class: "card" do %>
           <span class="title">
             Karuna Covid Releif
           </span>
         <% end %>
-        <% link_to "#0", class: "card" do %>
+        <% link_to "/karuna-covid-aid", class: "card" do %>
           <span class="title">
             Karuna Covid Aid
           </span>
