--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,11 +9,12 @@
     <title><%= current_page.data.title || "Karuna Welfare Society" %></title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800;900&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag "site" %>
-    <%= javascript_include_tag "site" %>
   </head>
   <body>
+    <%= partial "slide-nav" %>
     <%= partial "nav" %>
     <%= yield %>
     <%= partial "footer" %>
+    <%= javascript_include_tag "site" %>
   </body>
 </html>
