--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,15 +9,15 @@ title: Karuna Welfare Society
       <div class="spacer"></div>
       <div class="sps flex">
         <div class="inner">
-          <h1>Investing into India's tomorrow.</h1>
+          <h1 class="wow fadeInUp">Investing into India's tomorrow.</h1>
           <div>
-            <a href="#0" class="button">Get in touch</a>
+            <a href="#0" class="button wow fadeInUp" data-wow-delay="150ms">Get in touch</a>
           </div>
         </div>
         <div class="images-container">
-          <div><%= image_tag "bubble-1.png" %></div>
-          <div><%= image_tag "bubble-2.png" %></div>
-          <div><%= image_tag "bubble-3.png" %></div>
+          <div><%= image_tag "bubble-1.png", :class => "wow fadeInUp", :data => { :wow_delay => "300ms" } %></div>
+          <div><%= image_tag "bubble-2.png", :class => "wow fadeInUp", :data => { :wow_delay => "400ms" } %></div>
+          <div><%= image_tag "bubble-3.png", :class => "wow fadeInUp", :data => { :wow_delay => "600ms" } %></div>
         </div>
       </div>
       <div class="spacer"></div>
