--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -30,19 +30,19 @@ title: Karuna Welfare Society
       </div>
       <h2>See our various outreach programs to learn more about us:</h2>
       <div class="row">
-        <% link_to "karuna-kendra-study-center", class: "card" do %>
+        <% link_to "/karuna-kendra-study-center", class: "card" do %>
           <span class="title">
             Karuna Kendra Study Center
           </span>
         <% end %>
-        <% link_to "karuna-covid-releif", class: "card" do %>
+        <% link_to "/karuna-covid-releif", class: "card" do %>
           <span class="title">
             Karuna Covid Releif
           </span>
         <% end %>
-        <% link_to "/karuna-covid-aid", class: "card" do %>
+        <% link_to "/karuna-aid", class: "card" do %>
           <span class="title">
-            Karuna Covid Aid
+            Karuna Aid
           </span>
         <% end %>
         <% link_to "#0", class: "card" do %>
