--- a/source/_slide-nav.html.erb
+++ b/source/_slide-nav.html.erb
@@ -11,13 +11,13 @@
           <%= link_to "Home", '/' %>
         </li>
         <li>
-          <%= link_to "Karuna Aid", '/karuna-aid' %>
+          <%= link_to "Karuna Aid", '/karuna-aid', :relative => true %>
         </li>
         <li>
-          <%= link_to "Karuna Covid Releif", 'karuna-covid-releif' %>
+          <%= link_to "Karuna Covid Releif", '/karuna-covid-releif', :relative => true %>
         </li>
         <li>
-          <%= link_to "Karuna Kendra Study Center", 'karuna-kendra-study-center' %>
+          <%= link_to "Karuna Kendra Study Center", '/karuna-kendra-study-center', :relative => true %>
         </li>
       </ul>
     </nav>
