--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -184,6 +184,9 @@ a.menu {
       display: flex;
       position: relative;
       width: 100%;
+      @media (max-width: 600px) {
+        flex-direction: column;
+      }
       > div {
         max-width: 400px;
         border: 10px solid white;
