--- a/source/_slide-nav.html.erb
+++ b/source/_slide-nav.html.erb
@@ -17,6 +17,9 @@
           <%= link_to "Karuna Covid Releif", '/karuna-covid-releif', :relative => true %>
         </li>
         <li>
+          <%= link_to "Karuna Water Project", '/karuna-water-project', :relative => true %>
+        </li>
+        <li>
           <%= link_to "Karuna Kendra Study Center", '/karuna-kendra-study-center', :relative => true %>
         </li>
       </ul>
