--- a/source/karuna-aid/index.html.erb
+++ b/source/karuna-aid/index.html.erb
@@ -22,4 +22,12 @@
       <div class="spacer"></div>
     </div>
   </section>
+  <section class="gallery">
+    <div><%= image_tag 'karuna-aid-3.JPG' %></div>
+    <div><%= image_tag 'karuna-aid-4.JPG' %></div>
+    <div><%= image_tag 'karuna-aid-1.JPG' %></div>
+    <div><%= image_tag 'karuna-aid-2.JPG' %></div>
+  </section>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
 </main>
