--- a/source/karuna-kendra-study-center/index.html.erb
+++ b/source/karuna-kendra-study-center/index.html.erb
@@ -24,4 +24,16 @@
       <div class="spacer"></div>
     </div>
   </section>
+  <section class="gallery">
+    <div><%= image_tag 'karuna-study-center-1.jpg' %></div>
+    <div><%= image_tag 'karuna-study-center-2.JPG' %></div>
+    <div><%= image_tag 'karuna-study-center-3.JPG' %></div>
+    <div><%= image_tag 'karuna-study-center-4.JPG' %></div>
+    <div><%= image_tag 'karuna-study-center-5.jpg' %></div>
+    <div><%= image_tag 'karuna-study-center-6.JPG' %></div>
+    <div><%= image_tag 'karuna-study-center-7.jpg' %></div>
+    <div><%= image_tag 'karuna-study-center-8.jpg' %></div>
+  </section>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
 </main>
