--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,15 +9,19 @@ title: Karuna Welfare Society
       <div class="spacer"></div>
       <div class="sps flex">
         <div class="inner">
-          <h1 class="wow fadeInUp">Investing into India's tomorrow.</h1>
+          <h1 data-aos="fade-right" data-aos-duration="600" data-aos-delay="300" data-aos-offset="10">Investing into India's tomorrow.</h1>
           <div>
-            <a href="mailto:info@karunasociety.co.in" class="button wow fadeInUp" data-wow-delay="150ms">Get in touch</a>
+            <a href="mailto:info@karunasociety.co.in" class="button" data-aos="fade-right" data-aos-duration="600" data-aos-offset="10"
+            data-aos-delay="600">Get in touch</a>
           </div>
         </div>
         <div class="images-container">
-          <div><%= image_tag "bubble-1.png", :class => "wow fadeInUp", :data => { :wow_delay => "300ms" } %></div>
-          <div><%= image_tag "bubble-2.png", :class => "wow fadeInUp", :data => { :wow_delay => "400ms" } %></div>
-          <div><%= image_tag "bubble-3.png", :class => "wow fadeInUp", :data => { :wow_delay => "600ms" } %></div>
+          <div data-aos="fade-up" data-aos-duration="600" data-aos-offset="10"
+            data-aos-delay="900"><%= image_tag "bubble-1.png" %></div>
+          <div data-aos="fade-up" data-aos-duration="600" data-aos-offset="10"
+            data-aos-delay="500"><%= image_tag "bubble-2.png" %></div>
+          <div data-aos="fade-up" data-aos-duration="600" data-aos-offset="10"
+            data-aos-delay="100"><%= image_tag "bubble-3.png" %></div>
         </div>
       </div>
       <div class="spacer"></div>
