--- a/source/_slide-nav.html.erb
+++ b/source/_slide-nav.html.erb
@@ -14,7 +14,7 @@
           <%= link_to "Karuna Aid", '/karuna-aid', :relative => true %>
         </li>
         <li>
-          <%= link_to "Karuna Covid Releif", '/karuna-covid-releif', :relative => true %>
+          <%= link_to "Karuna Covid Relief", '/karuna-covid-relief', :relative => true %>
         </li>
         <li>
           <%= link_to "Karuna Water Project", '/karuna-water-project', :relative => true %>
