--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -49,7 +49,7 @@ title: Karuna Welfare Society
             Karuna Aid
           </span>
         <% end %>
-        <% link_to "#0", class: "card" do %>
+        <% link_to "/karuna-water-project", class: "card" do %>
           <span class="title">
             Karuna Water Project
           </span>
