Add audited statements

--- a/source/_slide-nav.html.erb
+++ b/source/_slide-nav.html.erb
@@ -22,6 +22,9 @@
         <li>
           <%= link_to "Karuna Kendra Study Center", '/karuna-kendra-study-center', :relative => true %>
         </li>
+        <li>
+          <%= link_to "Audited Statements", 'https://www.notion.so/karunasociety/Karuna-Welfare-Society-df70681b9ece4cf89a86acd283621a59' %>
+        </li>
       </ul>
     </nav>
   </div>
