--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -39,9 +39,9 @@ title: Karuna Welfare Society
             Karuna Kendra Study Center
           </span>
         <% end %>
-        <% link_to "/karuna-covid-releif", class: "card" do %>
+        <% link_to "/karuna-covid-relief", class: "card" do %>
           <span class="title">
-            Karuna Covid Releif
+            Karuna Covid Relief
           </span>
         <% end %>
         <% link_to "/karuna-aid", class: "card" do %>
